# LibSL

./: .gitignore  CMakeLists.txt  libsl-config.cmake
cmake/: CheckCompilers.cmake  ForceOutOfSourceBuild.cmake  autoDL.cmake  libsl-config.cmake  macros.cmake
libs/: CMakeLists.txt
libs/CMake/: loki.cmake
libs/anttweakbar/: CMakeLists.txt
libs/anttweakbar/src/: TwMgr.cpp
libs/glux/: CMakeLists.txt
libs/glux/gluxinfo/: gluxinfo.cpp
libs/glux/src/: GLX_3DFX_multisample.h  GLX_AMD_gpu_association.h  GLX_ARB_context_flush_control.h  GLX_ARB_create_context.h  GLX_ARB_create_context_no_error.h  GLX_ARB_create_context_profile.h  GLX_ARB_create_context_robustness.h  GLX_ARB_fbconfig_float.h  GLX_ARB_framebuffer_sRGB.h  GLX_ARB_get_proc_address.h  GLX_ARB_multisample.h  GLX_ARB_robustness_application_isolation.h  GLX_ARB_robustness_share_group_isolation.h  GLX_ARB_vertex_buffer_object.h  GLX_EXT_buffer_age.h  GLX_EXT_create_context_es2_profile.h  GLX_EXT_create_context_es_profile.h  GLX_EXT_fbconfig_packed_float.h  GLX_EXT_framebuffer_sRGB.h  GLX_EXT_import_context.h  GLX_EXT_libglvnd.h  GLX_EXT_stereo_tree.h  GLX_EXT_swap_control.h  GLX_EXT_swap_control_tear.h  GLX_EXT_texture_from_pixmap.h  GLX_EXT_visual_info.h  GLX_EXT_visual_rating.h  GLX_INTEL_swap_event.h  GLX_MESA_agp_offset.h  GLX_MESA_copy_sub_buffer.h  GLX_MESA_pixmap_colormap.h  GLX_MESA_query_renderer.h  GLX_MESA_release_buffers.h  GLX_MESA_set_3dfx_mode.h  GLX_NV_copy_buffer.h  GLX_NV_copy_image.h  GLX_NV_delay_before_swap.h  GLX_NV_float_buffer.h  GLX_NV_multisample_coverage.h  GLX_NV_present_video.h  (+666 more)
libs/jpeg/: jerror.c  jmemansi.c  jmemmgr.c
libs/libarchive/libarchive/: CMakeLists.txt  archive_cryptor.c
libs/loki/: CMakeLists.txt
libs/newmat/: example.cpp  myexcept.cpp  newmat5.cpp  sort.cpp
libs/png/: png.h
libs/zlib/: zconf_cmake.h
src/: CMakeLists.txt  LibSL.config.h.in  LibSL_linalg.h
src/ArrayHelpers/: ArrayHelpers.cpp  ArrayHelpers.h
src/CppHelpers/: CMakeLists.txt
src/D3DHelpers/: CMakeLists.txt
src/DataStructures/: CMakeLists.txt  Pod.h
src/GLHelpers/: CMakeLists.txt  GLBasicPipeline.cpp  GLHelpers.cpp  Triangulate.h
src/GPUHelpers/: Profiler.cpp
src/GPUMesh/: GPUMesh_CompilePolicy_GL4_VBO.h  GPUMesh_CompilePolicy_GL_VBO.h
src/GPUTex/: CMakeLists.txt
src/Geometry/: CMakeLists.txt  Components.cpp  ImplicitShape.cpp  MarchingCubes.h  PointTree.cpp  PointTree.h
src/Geometry/Intersections/: Intersection_Segment_Segment.cpp
src/Image/: CMakeLists.txt  DistanceField.cpp  Image.h  ImageFormat_TGA.cpp
src/LibSL/: CMakeLists.txt
src/LibSL-GPU/: CMakeLists.txt
src/LibSL-GPU/CgHelpers/: CMakeLists.txt  CgImageProcessing.cg
src/LibSL-GPU/GLHelpers/: AutoBindShader.cpp  GLBasicPipeline.h  GLHelpers.h  Triangulate.cpp
src/LibSL-GPU/GPUHelpers/: CMakeLists.txt  GPUHelpers.cpp  basefont.h
src/LibSL-GPU/GPUMesh/: CMakeLists.txt  GPUMesh_CompilePolicy_GLES_VBO.h
src/LibSL-GPU/GPUTex/: GPUTex.h  GPUTex_CompilePolicy_GL.h
src/LibSL-GPU/UIHelpers/: SimpleUI_glfw.cpp  SimpleUI_glut.cpp  SimpleUI_win_d3d.cpp  TrackballUI.h
src/LibSL-advanced/: CMakeLists.txt
src/LibSL-advanced/LinAlg/: PCA.cpp  TaucsHelpers.cpp
src/LibSL-advanced/TemplateHelpers/: CMakeLists.txt
src/LibSL-core/: CMakeLists.txt
src/LibSL-core/CppHelpers/: BasicParser.h  CppHelpers.cpp  CppHelpers.h
src/LibSL-core/Errors/: CMakeLists.txt
src/LibSL-core/Geometry/: Contour.cpp  Contour.h  MarchingCubes.cpp  Morpho.cpp  Voxelizer.h
src/LibSL-core/Geometry/Distances/: Distance_Segment_Point.cpp
src/LibSL-core/Geometry/Intersections/: Intersection_Ray_AABox.cpp  Intersection_Ray_Plane.cpp
src/LibSL-core/Image/: Image.cpp  ImageFormat_PNG.cpp  ImageFormat_pfm.cpp
src/LibSL-core/Math/: Histogram.h
src/LibSL-core/Memory/: CMakeLists.txt
src/LibSL-core/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshFormat_stl.cpp  MeshFormat_wrl.cpp  VertexFormat_dynamic.cpp
src/LibSL-core/StlHelpers/: CMakeLists.txt
src/LibSL-sharp/: CMakeLists.txt
src/LibSL-sharp/C#/: CMakeLists.txt  GlPanel.cs  GlPanel.designer.cs  LibSL_sharp.csproj.template  PropertySheet.cs  SlidingPanel.cs  SlidingPanel.designer.cs
src/LibSL-sharp/C#/Properties/: AssemblyInfo.cs
src/LibSL-sharp/GLPanel/C++/: GLPanelBinder.cpp  GLPanelBinder.h
src/LibSL-sharp/tutorials/GLPanelTuto/GLPanelTuto/: Form1.cs  Program.cs
src/LibSL-sharp/tutorials/GLPanelTuto/GLPanelTuto/Properties/: Resources.Designer.cs
src/LibSL-structures/: CMakeLists.txt
src/LibSL-structures/ArrayHelpers/: CMakeLists.txt
src/LibSL-structures/DataStructures/: Graph.h  GraphAlgorithms.h
src/LinAlg/: CMakeLists.txt
src/Math/: CMakeLists.txt  Matrix4x4.h
src/Memory/: ArrayRemap.cpp
src/Mesh/: AnimatedMeshFormat_animesh.h  MeshFormat_OBJ.cpp  MeshFormat_mesh.cpp
src/Shaders/: CMakeLists.txt
src/SvgHelpers/: CMakeLists.txt
src/System/: CMakeLists.txt  System.cpp  System.h
src/UIHelpers/: BindAntTweakBar.cpp  BindImGui.cpp  CMakeLists.txt  SimpleUI.cpp  SimpleUI.h  SimpleUI_win_gl.cpp  Trackball.cpp  TrackballUI.cpp
src/Win32Helpers/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile  test_mesh.cpp  test_sh.cpp  test_sh.fp  test_sh.vp
tests/emscripten/: CMakeLists.txt  test1.fp  test1.vp
tools/: CMakeLists.txt  make_binary_distrib_win32.bat  make_source_distrib.bat
tools/BlenderImportExport/: Export Animated Meshes from Blender to LibSL.txt  LibSLExport.py  export_x.py
tools/autobindshader/: AutoBindShader.cmake
tools/imageedit/: CMakeLists.txt  imageedit.sln  imageedit.vcproj
tools/smoothmesh/: CMakeLists.txt
tools/uvatlas/: CMakeLists.txt  uvatlas.sln  uvatlas.vcproj
tools/viewfloat/: CMakeLists.txt  viewfloat.fx  viewfloat.sln  viewfloat.vcproj
tools/viewimage/: CMakeLists.txt
tools/viewmesh/: CMakeLists.txt
tutorials/: CMakeLists.txt
tutorials/AutoBindShader/: AutoBindShader_gl_tutorial2_anttweakbar.cpp  CMakeLists.txt  shader_tutorial1.gs  shader_tutorial2.fp
tutorials/Font/: CMakeLists.txt  font_tutorial0.cpp  font_tutorial0_d3d.sln  font_tutorial0_d3d.vcproj  font_tutorial0_gl.sln  font_tutorial0_gl.vcproj
(+51 files in other folders)
